# xilos

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  xilos.toml
src/xilos/: __init__.py  compile_project.py  main.py  pyproject.toml  settings.py  xilos_settings.py
src/xilos/_build/: builder.py  contracts.py  generator.py  toml_merger.py
src/xilos/_build/steps/: __init__.py  assets.py  code.py  config.py  pipeline.py  structure.py
src/xilos/_template/: __init__.py  config.py  pyproject.toml  registry.py  settings.py
src/xilos/_template/xaws/: pyproject.toml  settings.py  storage.py
src/xilos/_template/xazure/: pyproject.toml  settings.py  storage.py  storege.py
src/xilos/_template/xcore/: settings.py  xmodel.py  xprocessor.py  xstore.py
src/xilos/_template/xgcp/: pyproject.toml  settings.py  storage.py
src/xilos/_template/xmonitor/: __init__.py  drift.py
src/xilos/_template/xrepos/bitbucket/: bitbucket-pipelines.yml
src/xilos/_template/xrepos/bitbucket/xproviders/: aws.yaml  azure.yaml  gcp.yaml
src/xilos/_template/xrepos/github/: ci.yml
src/xilos/_template/xrepos/github/.github/workflows/: ci.yml
src/xilos/_template/xrepos/github/xproviders/: aws.yaml  azure.yaml  gcp.yaml
src/xilos/_template/xrepos/gitlab/: .gitlab-ci.yml
src/xilos/_template/xrepos/gitlab/xproviders/: aws.yaml  azure.yaml  gcp.yaml
src/xilos/_template/xroot/: .dockerignore  .gitignore  .pre-commit-config.yaml  alpine.Dockerfile  bookworm.Dockerfile  docker-compose.yml
src/xilos/_template/xserve/: main.py  pyproject.toml  utils.py
src/xilos/_template/xserve/schemas/: predict.py
src/xilos/_template/xtrain/: main.py  model.py
src/xilos/_template/xtrain/processor/: example.py  processor.py
src/xilos/aws/: storege.py
src/xilos/azure/: storege.py
src/xilos/core/: xstore.py
src/xilos/gcp/: storege.py
src/xilos/xmonitor/: drift.py
src/xilos/xserve/: utils.py
src/xilos/xtrain/: main.py
src/xilos/xtrain/processor/: __init__.py
tests/: test_configurations.py
