[tool.poetry]
name = "xilos"                                       # to change from xilos.toml
version = "0.1.0"
description = "Production-grade ML project template" # to change from xilos.toml
authors = ["Milosz Bertman <milosz@xomnia.com>"]     # to change from xilos.toml
readme = "README.md"
packages = [{ include = "xilos", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11.9"
fastparquet = "^2025.12.0"
polars = "^0.20.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
scikit-learn = "^1.3.0"
numpy = "^1.26.0"
loguru = "^0.7.2"
scipy = "^1.11.0"

[tool.poetry.group.serve.dependencies]
fastapi = "^0.109.0"
uvicorn = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.3.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
