[tool.poetry]
name = "xfill"
version = "xfill"
description = "xfill"
authors = ["xfill"]
readme = "README.md"
packages = [{ include = "xfill", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11.9"

fastparquet = "^2025.12.0"
polars = "^1.37.1"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
scikit-learn = "^1.8.0"
numpy = "^1.26.0"
loguru = "^0.7.3"
scipy = "^1.17.0"
xgboost = "^3.1.3"
lightgbm = "^4.2.0"
ydata_profiling = "^4.18.1"

[tool.poetry.group.serve.dependencies]
fastapi = "^0.128.0"
uvicorn = "^0.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.14"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
